TeamDivisionActivity Layout überarbeitet, add_game_enter_data beendet auch die Activities vor ihr

--- a/app/src/main/res/layout/activity_team_division.xml
+++ b/app/src/main/res/layout/activity_team_division.xml
@@ -31,23 +31,54 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/container"
             android:layout_width="match_parent"
-            android:layout_height="420dp"
+            android:layout_height="400dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/appbar"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-        <Button
-            android:id="@+id/btnSave"
-            style="@style/buttonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_below="@+id/container"
-            android:layout_marginEnd="53dp"
-            android:layout_marginRight="53dp"
-            android:text="@string/btnContinue" />
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
+
+            <Button
+                android:id="@+id/btnCancel"
+                style="@style/buttonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="19dp"
+                android:layout_marginStart="19dp"
+                android:text="@string/btnCancel"
+                android:layout_alignBaseline="@+id/btnShuffle"
+                android:layout_alignBottom="@+id/btnShuffle"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <Button
+                android:id="@+id/btnShuffle"
+                style="@style/buttonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/btnShuffle"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" />
+
+            <Button
+                android:id="@+id/btnContinue"
+                style="@style/buttonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/btnContinue"
+                android:layout_marginRight="29dp"
+                android:layout_marginEnd="29dp"
+                android:layout_alignBaseline="@+id/btnShuffle"
+                android:layout_alignBottom="@+id/btnShuffle"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+        </RelativeLayout>
 
     </RelativeLayout>
 
