--- a/app/src/main/res/layout/activity_addgame.xml
+++ b/app/src/main/res/layout/activity_addgame.xml
@@ -95,13 +95,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btnCancel"
-        android:layout_alignBaseline="@+id/btnContinue"
-        android:layout_alignBottom="@+id/btnContinue"
+        android:layout_alignBaseline="@+id/btnSave"
+        android:layout_alignBottom="@+id/btnSave"
         android:layout_toLeftOf="@+id/datePicker"
         android:layout_toStartOf="@+id/datePicker" />
 
     <Button
-        android:id="@+id/btnContinue"
+        android:id="@+id/btnSave"
         style="@style/buttonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
