--- a/app/src/main/res/menu/activity_main2_drawer.xml
+++ b/app/src/main/res/menu/activity_main2_drawer.xml
@@ -3,7 +3,7 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@id/mniAddPlayer"
+            android:id="@+id/mniAddPlayer"
             android:icon="@drawable/ic_mosquito"
             android:title="@string/mniAdd" />
         <item
