--- a/app/src/main/res/layout/activity_addplayer.xml
+++ b/app/src/main/res/layout/activity_addplayer.xml
@@ -5,45 +5,31 @@
     android:background="@drawable/background">
 
     <EditText
-        android:id="@+id/edtNewPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/txtName"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/edtUsername"
-        android:layout_toEndOf="@+id/txtName"
-        android:layout_toRightOf="@+id/txtName"
-        android:ems="10"
-        android:inputType="textPersonName" />
-
-    <EditText
         android:id="@+id/edtUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/txvUsername"
+        android:layout_above="@+id/txvPassword"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/txvUsername"
-        android:layout_toRightOf="@+id/txvUsername"
+        android:layout_below="@+id/edtName"
         android:ems="10"
-        android:inputType="text" />
+        android:inputType="textPersonName"
+        android:textSize="17sp" />
 
-    <TextView
-        android:id="@+id/txtName"
+    <EditText
+        android:id="@+id/edtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:text="@string/Name"
-        android:textSize="18sp"
-        android:layout_below="@+id/txtPassword"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/txtPassword"
-        android:layout_alignEnd="@+id/txtPassword" />
+        android:layout_alignBottom="@+id/txvName"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/txvName"
+        android:ems="10"
+        android:inputType="text"
+        android:textSize="17sp" />
 
     <TextView
-        android:id="@+id/txtPassword"
+        android:id="@+id/txvPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/txvUsername"
@@ -53,20 +39,7 @@
         android:layout_below="@+id/txvUsername"
         android:padding="20dp"
         android:text="@string/Password"
-        android:textSize="18sp" />
-
-    <EditText
-        android:id="@+id/edtName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/txtName"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/edtNewPassword"
-        android:layout_toEndOf="@+id/txtName"
-        android:layout_toRightOf="@+id/txtName"
-        android:ems="10"
-        android:inputType="textPersonName" />
+        android:textSize="17sp" />
 
     <TextView
         android:id="@+id/txvUsername"
@@ -74,20 +47,49 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/txvName"
         android:padding="20dp"
         android:text="@string/Username"
-        android:textSize="18sp" />
+        android:textSize="17sp"
+        android:layout_toLeftOf="@+id/edtName"
+        android:layout_toStartOf="@+id/edtName" />
+
+    <EditText
+        android:id="@+id/edtPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/txvPassword"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/edtUsername"
+        android:layout_toEndOf="@+id/txvPassword"
+        android:layout_toRightOf="@+id/txvPassword"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:textSize="17sp" />
+
+    <TextView
+        android:id="@+id/txvName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@+id/edtName"
+        android:padding="20dp"
+        android:text="@string/Name"
+        android:textSize="17sp"
+        android:layout_toLeftOf="@+id/edtName" />
 
     <CheckBox
         android:id="@+id/ckbIsAdmin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/txvPassword"
+        android:layout_toEndOf="@+id/txvPassword"
+        android:layout_toRightOf="@+id/txvPassword"
         android:text="@string/ckbIsAdmin"
-        android:textSize="18sp"
-        android:layout_below="@+id/txtName"
-        android:layout_toRightOf="@+id/txtName"
-        android:layout_toEndOf="@+id/txtName" />
+        android:textSize="17sp" />
 
     <Button
         android:id="@+id/btnCancel"
