--- a/app/src/main/res/layout/activity_editplayer_admin.xml
+++ b/app/src/main/res/layout/activity_editplayer_admin.xml
@@ -4,81 +4,85 @@
     android:layout_height="match_parent"
     android:background="@drawable/background">
 
-    <EditText
-        android:id="@+id/edtNewPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/txtName"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/edtUsername"
-        android:layout_toEndOf="@+id/txtName"
-        android:layout_toRightOf="@+id/txtName"
-        android:ems="10"
-        android:enabled="false"
-        android:inputType="textPassword" />
-
-    <EditText
-        android:id="@+id/edtUsername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/txvUsername"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/txvUsername"
-        android:layout_toRightOf="@+id/txvUsername"
-        android:ems="10"
-        android:inputType="text" />
-
     <TextView
-        android:id="@+id/txtName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:text="@string/Name"
-        android:textSize="18sp"
-        android:layout_below="@+id/ckbUpdatePassword"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/ckbUpdatePassword"
-        android:layout_alignEnd="@+id/ckbUpdatePassword" />
-
-    <CheckBox
-        android:id="@+id/ckbUpdatePassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/txvUsername"
-        android:padding="20dp"
-        android:text="@string/ckbUpdatePassword"
-        android:textSize="18sp"
-        android:layout_toLeftOf="@+id/edtUsername"
-        android:layout_toStartOf="@+id/edtUsername" />
-
-    <EditText
-        android:id="@+id/edtName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/txtName"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/edtNewPassword"
-        android:layout_toEndOf="@+id/txtName"
-        android:layout_toRightOf="@+id/txtName"
-        android:ems="10"
-        android:inputType="textPersonName" />
-
-    <TextView
-        android:id="@+id/txvUsername"
+        android:id="@+id/txvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/edtName"
+        android:layout_toStartOf="@+id/edtName"
+        android:padding="20dp"
+        android:text="@string/Name"
+        android:textSize="17dp" />
+
+    <EditText
+        android:id="@+id/edtName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/txvName"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/txvName"
+        android:ems="10"
+        android:inputType="text"
+        android:textSize="17dp" />
+
+    <TextView
+        android:id="@+id/txtUsername"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/txvName"
+        android:layout_toLeftOf="@+id/edtName"
+        android:layout_toStartOf="@+id/edtName"
         android:padding="20dp"
         android:text="@string/Username"
-        android:textSize="18sp" />
+        android:textSize="17dp" />
+
+    <EditText
+        android:id="@+id/edtUsername"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/txvPassword"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/edtName"
+        android:layout_toEndOf="@+id/txvPassword"
+        android:layout_toRightOf="@+id/txvPassword"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:textSize="17dp" />
+
+    <CheckBox
+        android:id="@+id/txvPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/txtUsername"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/txtUsername"
+        android:layout_below="@+id/txtUsername"
+        android:padding="20dp"
+        android:text="@string/ckbUpdatePassword"
+        android:textSize="17dp" />
+
+    <EditText
+        android:id="@+id/edtPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/txvPassword"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/edtUsername"
+        android:layout_toEndOf="@+id/txvPassword"
+        android:layout_toRightOf="@+id/txvPassword"
+        android:ems="10"
+        android:enabled="false"
+        android:inputType="textPassword"
+        android:textSize="17dp" />
 
     <CheckBox
         android:id="@+id/ckbIsAdmin"
@@ -86,9 +90,9 @@
         android:layout_height="wrap_content"
         android:text="@string/ckbIsAdmin"
         android:textSize="18sp"
-        android:layout_below="@+id/edtName"
-        android:layout_toRightOf="@+id/txtName"
-        android:layout_toEndOf="@+id/txtName" />
+        android:layout_below="@+id/edtPassword"
+        android:layout_toRightOf="@+id/txvPassword"
+        android:layout_toEndOf="@+id/txvPassword" />
 
     <Button
         android:id="@+id/btnCancel"
