--- a/app/src/main/res/layout/activity_editplayer_own.xml
+++ b/app/src/main/res/layout/activity_editplayer_own.xml
@@ -8,64 +8,93 @@
         android:id="@+id/txvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="21dp"
-        android:gravity="center"
-        android:padding="10dp"
-        android:text="@string/Name"
-        android:textSize="18sp"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/edtUsername"
-        android:layout_toStartOf="@+id/edtUsername" />
-
-    <TextView
-        android:id="@+id/txvPositions"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView14"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="49dp"
-        android:gravity="center"
-        android:text="@string/Positions"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/edtUsername"
-        android:layout_alignLeft="@+id/txvName"
-        android:layout_alignStart="@+id/txvName"
-        android:layout_below="@+id/edtName"
-        android:layout_toLeftOf="@+id/edtUsername"
-        android:layout_toStartOf="@+id/edtUsername"
-        android:gravity="center"
-        android:text="@string/Username"
-        android:textSize="18sp" />
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/edtName"
+        android:layout_toStartOf="@+id/edtName"
+        android:padding="20dp"
+        android:text="@string/Name"
+        android:textSize="17dp" />
 
     <EditText
         android:id="@+id/edtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:layout_alignBaseline="@+id/txvName"
         android:layout_alignBottom="@+id/txvName"
-        android:layout_toRightOf="@+id/txvName"
-        android:layout_toEndOf="@+id/txvName" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/txvName"
+        android:ems="10"
+        android:inputType="text"
+        android:textSize="17dp" />
+
+    <TextView
+        android:id="@+id/txtUsername"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/txvName"
+        android:layout_toLeftOf="@+id/edtName"
+        android:layout_toStartOf="@+id/edtName"
+        android:padding="20dp"
+        android:text="@string/Username"
+        android:textSize="17dp" />
 
     <EditText
         android:id="@+id/edtUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/txvPassword"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/edtName"
+        android:layout_toEndOf="@+id/txvPassword"
+        android:layout_toRightOf="@+id/txvPassword"
         android:ems="10"
         android:inputType="textPersonName"
-        android:layout_below="@+id/txvName"
-        android:layout_alignLeft="@+id/ckbPosAtk"
-        android:layout_alignStart="@+id/ckbPosAtk" />
+        android:textSize="17dp" />
+
+    <CheckBox
+        android:id="@+id/txvPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/txtUsername"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/txtUsername"
+        android:layout_below="@+id/txtUsername"
+        android:padding="20dp"
+        android:text="@string/ckbUpdatePassword"
+        android:textSize="17dp" />
+
+    <EditText
+        android:id="@+id/edtPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/txvPassword"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/edtUsername"
+        android:layout_toEndOf="@+id/txvPassword"
+        android:layout_toRightOf="@+id/txvPassword"
+        android:ems="10"
+        android:enabled="false"
+        android:inputType="textPassword"
+        android:textSize="17dp" />
+
+    <TextView
+        android:id="@+id/txvPositions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/Positions"
+        android:textSize="18sp"
+        android:layout_marginTop="16dp"
+        android:layout_below="@+id/txvPassword"
+        android:layout_alignRight="@+id/ckbPosGoal"
+        android:layout_alignEnd="@+id/ckbPosGoal" />
 
     <CheckBox
         android:id="@+id/ckbPosAtk"
@@ -114,8 +143,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="45dp"
-        android:layout_toLeftOf="@+id/edtUsername"
-        android:layout_toStartOf="@+id/edtUsername"
+        android:layout_toLeftOf="@+id/edtName"
+        android:layout_toStartOf="@+id/edtName"
         android:text="@string/btnCancel" />
 
     <Button
