--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:background="@drawable/background">
 
     <ListView
-        android:id="@+id/lsvEditableGames"
+        android:id="@+id/lsvPlayers"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
