--- a/app/src/main/res/layout/content_main2.xml
+++ b/app/src/main/res/layout/content_main2.xml
@@ -12,7 +12,7 @@
     android:background="@drawable/background">
 
     <ListView
-        android:id="@+id/lsvEditableGames"
+        android:id="@+id/lsvPlayers"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
