Small misc. adjustments;

--- a/app/src/main/res/layout/activity_show_player_stats.xml
+++ b/app/src/main/res/layout/activity_show_player_stats.xml
@@ -35,13 +35,14 @@
                 android:layout_margin="10dp"
                 android:layout_toRightOf="@+id/lblName"
                 android:gravity="end"
+                android:textColor="@color/darkerRed"
                 android:textSize="18dp" />
 
             <View
                 android:id="@+id/sep1"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@android:color/black"
+                android:background="@color/redLogo"
                 android:layout_below="@id/txvName"/>
 
             <TextView
@@ -60,6 +61,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
                 android:gravity="end"
+                android:textColor="@color/darkerRed"
                 android:layout_alignBaseline="@+id/lblGamesPlayed"
                 android:layout_alignBottom="@+id/lblGamesPlayed"
                 android:layout_alignRight="@+id/txvName"
@@ -83,6 +85,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
                 android:gravity="end"
+                android:textColor="@color/darkerRed"
                 android:layout_alignBaseline="@+id/lblWins"
                 android:layout_alignBottom="@+id/lblWins"
                 android:layout_alignRight="@+id/txvGamesPlayed"
@@ -106,6 +109,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
                 android:gravity="end"
+                android:textColor="@color/darkerRed"
                 android:layout_alignBaseline="@+id/lblDefeats"
                 android:layout_alignBottom="@+id/lblDefeats"
                 android:layout_alignRight="@+id/txvWins"
@@ -129,6 +133,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
                 android:gravity="end"
+                android:textColor="@color/darkerRed"
                 android:layout_alignBaseline="@+id/lblDraws"
                 android:layout_alignBottom="@+id/lblDraws"
                 android:layout_alignRight="@+id/txvDefeats"
@@ -140,7 +145,7 @@
                 android:id="@+id/sep2"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@android:color/black"
+                android:background="@color/redLogo"
                 android:layout_below="@id/lblDraws"/>
 
             <TextView
@@ -159,6 +164,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
                 android:gravity="end"
+                android:textColor="@color/darkerRed"
                 android:layout_alignBaseline="@+id/lblAvgGoalDiff"
                 android:layout_alignBottom="@+id/lblAvgGoalDiff"
                 android:layout_alignRight="@+id/txvDraws"
@@ -182,6 +188,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
                 android:gravity="end"
+                android:textColor="@color/darkerRed"
                 android:layout_alignBaseline="@+id/lblGoalsShotAll"
                 android:layout_alignBottom="@+id/lblGoalsShotAll"
                 android:layout_alignRight="@+id/txvAvgGoalDiff"
@@ -205,6 +212,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
                 android:gravity="end"
+                android:textColor="@color/darkerRed"
                 android:layout_alignBaseline="@+id/lblGoalsShotDefault"
                 android:layout_alignBottom="@+id/lblGoalsShotDefault"
                 android:layout_alignRight="@+id/txvGoalsShotAll"
@@ -228,6 +236,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
                 android:gravity="end"
+                android:textColor="@color/darkerRed"
                 android:layout_alignBaseline="@+id/lblGoalsShotHead"
                 android:layout_alignBottom="@+id/lblGoalsShotHead"
                 android:layout_alignRight="@+id/txvGoalsShotDefault"
@@ -251,6 +260,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
                 android:gravity="end"
+                android:textColor="@color/darkerRed"
                 android:layout_alignBaseline="@+id/lblGoalsShotHeadSnow"
                 android:layout_alignBottom="@+id/lblGoalsShotHeadSnow"
                 android:layout_alignRight="@+id/txvGoalsShotHead"
@@ -274,6 +284,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
                 android:gravity="end"
+                android:textColor="@color/darkerRed"
                 android:layout_alignBaseline="@+id/lblGoalsShotPenalty"
                 android:layout_alignBottom="@+id/lblGoalsShotPenalty"
                 android:layout_alignRight="@+id/txvGoalsShotHeadSnow"
@@ -297,6 +308,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
                 android:gravity="end"
+                android:textColor="@color/darkerRed"
                 android:layout_alignBaseline="@+id/lblGoalsGot"
                 android:layout_alignBottom="@+id/lblGoalsGot"
                 android:layout_alignRight="@+id/txvGoalsShotPenalty"
@@ -320,6 +332,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
                 android:gravity="end"
+                android:textColor="@color/darkerRed"
                 android:layout_alignBaseline="@+id/lblNutmeg"
                 android:layout_alignBottom="@+id/lblNutmeg"
                 android:layout_alignRight="@+id/txvGoalsGot"
@@ -331,7 +344,7 @@
                 android:id="@+id/sep3"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@android:color/black"
+                android:background="@color/redLogo"
                 android:layout_below="@id/lblNutmeg"/>
 
             <TextView
@@ -350,6 +363,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
                 android:gravity="end"
+                android:textColor="@color/darkerRed"
                 android:layout_alignBaseline="@+id/lblPosAttack"
                 android:layout_alignBottom="@+id/lblPosAttack"
                 android:layout_alignRight="@+id/txvNutmeg"
@@ -373,6 +387,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
                 android:gravity="end"
+                android:textColor="@color/darkerRed"
                 android:layout_alignBaseline="@+id/lblPosDefense"
                 android:layout_alignBottom="@+id/lblPosDefense"
                 android:layout_alignRight="@+id/txvPosAttack"
@@ -396,6 +411,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
                 android:gravity="end"
+                android:textColor="@color/darkerRed"
                 android:layout_alignBaseline="@+id/lblPosMidfield"
                 android:layout_alignBottom="@+id/lblPosMidfield"
                 android:layout_alignRight="@+id/txvPosDefense"
@@ -419,6 +435,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
                 android:gravity="end"
+                android:textColor="@color/darkerRed"
                 android:layout_alignBaseline="@+id/lblPosGoal"
                 android:layout_alignBottom="@+id/lblPosGoal"
                 android:layout_alignRight="@+id/txvPosMidfield"
