--- a/app/src/main/res/layout/activity_add_game_enter_data.xml
+++ b/app/src/main/res/layout/activity_add_game_enter_data.xml
@@ -5,118 +5,110 @@
     android:orientation="vertical"
     android:background="@drawable/background">
 
-    <ScrollView
+
+    <RelativeLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_below="@+id/top_layout">
+
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/appbar_padding_top"
+            android:theme="@style/AppTheme.AppBarOverlay"
+            android:visibility="visible">
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </android.support.design.widget.AppBarLayout>
 
         <RelativeLayout
-            android:id="@+id/container"
+            android:id="@+id/layout_common_data"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/top_layout">
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/appbar">
 
-            <android.support.design.widget.AppBarLayout
-                android:id="@+id/appbar"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/txtScore"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/appbar_padding_top"
-                android:theme="@style/AppTheme.AppBarOverlay"
-                android:visibility="visible">
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentStart="true"
+                android:paddingTop="10dp"
+                android:gravity="center"
+                android:paddingBottom="10dp"
+                android:textSize="24sp" />
 
-                <android.support.design.widget.TabLayout
-                    android:id="@+id/tabs"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </android.support.design.widget.AppBarLayout>
-
-            <RelativeLayout
-                android:id="@+id/layout_common_data"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/txtRemark"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/appbar">
+                android:text="@string/Remark"
+                android:gravity="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textSize="18sp"
+                android:layout_marginLeft="10dp"
+                android:layout_below="@+id/txtScore"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignBottom="@+id/edtRemark" />
 
-                <TextView
-                    android:id="@+id/txtScore"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentStart="true"
-                    android:paddingTop="10dp"
-                    android:gravity="center"
-                    android:paddingBottom="10dp"
-                    android:textSize="24sp" />
-
-                <TextView
-                    android:id="@+id/txtRemark"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/Remark"
-                    android:gravity="center"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                    android:textSize="18sp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_below="@+id/txtScore"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignBottom="@+id/edtRemark" />
-
-                <EditText
-                    android:id="@+id/edtRemark"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:inputType="textPersonName"
-                    android:layout_marginRight="10dp"
-                    android:layout_below="@+id/txtScore"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true" />
-            </RelativeLayout>
-
-            <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/pager"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_weight="0.5"
-                android:layout_below="@+id/layout_common_data"></android.support.v4.view.ViewPager>
-
-            <RelativeLayout
-                android:id="@+id/layout_buttons"
-                android:layout_width="match_parent"
+            <EditText
+                android:id="@+id/edtRemark"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/pager">
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:layout_marginRight="10dp"
+                android:layout_below="@+id/txtScore"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+        </RelativeLayout>
 
+        <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_weight="0.5"
+            android:layout_below="@+id/layout_common_data"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"></android.support.v4.view.ViewPager>
+
+        <RelativeLayout
+            android:id="@+id/layout_buttons"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/pager">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true">
                 <Button
                     android:id="@+id/btnBack"
                     style="@style/buttonStyle"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginLeft="34dp"
-                    android:layout_marginStart="34dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_weight="1"
                     android:text="@string/btnBack" />
 
                 <Button
                     android:id="@+id/btnSave"
                     style="@style/buttonStyle"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginEnd="31dp"
-                    android:layout_marginRight="31dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_weight="1"
                     android:text="@string/btnSave" />
-            </RelativeLayout>
+            </LinearLayout>
         </RelativeLayout>
-    </ScrollView>
+    </RelativeLayout>
 
 </LinearLayout>
