--- a/app/src/main/res/layout/activity_editplayer_admin.xml
+++ b/app/src/main/res/layout/activity_editplayer_admin.xml
@@ -94,28 +94,30 @@
         android:layout_toRightOf="@+id/txvPassword"
         android:layout_toEndOf="@+id/txvPassword" />
 
-    <Button
-        android:id="@+id/btnCancel"
-        style="@style/buttonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/btnSave"
-        android:layout_alignBottom="@+id/btnSave"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="64dp"
-        android:layout_marginStart="64dp"
-        android:text="@string/btnCancel" />
-
-    <Button
-        android:id="@+id/btnSave"
-        style="@style/buttonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="45dp"
-        android:text="@string/btnSave"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/ckbIsAdmin"
-        android:layout_toEndOf="@+id/ckbIsAdmin" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+        <Button
+            android:id="@+id/btnCancel"
+            style="@style/buttonStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/btnCancel" />
+
+        <Button
+            android:id="@+id/btnSave"
+            style="@style/buttonStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/btnSave" />
+    </LinearLayout>
+
+
+
 
 </RelativeLayout>
