--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/background">
 
     <TextView
         android:id="@+id/txvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/txvPassword"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_marginLeft="12dp"
         android:layout_marginStart="12dp"
         android:padding="20dp"
         android:text="@string/Username"
-        android:textSize="18sp"
-        android:layout_above="@+id/txvPassword"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/edtName"
@@ -49,35 +50,39 @@
         android:id="@+id/edtPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/edtName"
+        android:layout_alignRight="@+id/edtName"
         android:layout_below="@+id/txvName"
         android:layout_toRightOf="@+id/txvName"
         android:ems="10"
-        android:inputType="textPassword"
-        android:layout_alignRight="@+id/edtName"
-        android:layout_alignEnd="@+id/edtName" />
+        android:inputType="textPassword" />
 
-    <Button
-        android:id="@+id/btnLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edtPassword"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="53dp"
-        android:paddingBottom="20dp"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-        android:paddingTop="20dp"
-        android:text="@string/btnLogin"
-        style="@style/buttonStyle"/>
+    <LinearLayout
+        android:id="@+id/layLinear"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <Button
+            android:id="@+id/btnLogin"
+            style="@style/buttonStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Login" />
+    </LinearLayout>
 
     <ProgressBar
         android:id="@+id/progressIndicator"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btnLogin"
+        android:layout_alignParentBottom="false"
+        android:layout_below="@+id/edtPassword"
         android:layout_centerHorizontal="true"
-        android:visibility="gone"
-        android:layout_marginTop="24dp" />
+        android:layout_marginTop="24dp"
+        android:visibility="gone" />
 
 </RelativeLayout>
