--- a/app/src/main/res/layout/activity_team_division.xml
+++ b/app/src/main/res/layout/activity_team_division.xml
@@ -37,48 +37,37 @@
             android:layout_below="@+id/appbar"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/container"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true">
 
             <Button
                 android:id="@+id/btnCancel"
                 style="@style/buttonStyle"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="19dp"
-                android:layout_marginStart="19dp"
-                android:text="@string/btnCancel"
-                android:layout_alignBaseline="@+id/btnShuffle"
-                android:layout_alignBottom="@+id/btnShuffle"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:layout_weight="1"
+                android:text="@string/btnCancel" />
 
             <Button
                 android:id="@+id/btnShuffle"
                 style="@style/buttonStyle"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/btnShuffle"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true" />
+                android:layout_weight="1"
+                android:text="@string/btnShuffle" />
 
             <Button
                 android:id="@+id/btnContinue"
                 style="@style/buttonStyle"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/btnContinue"
-                android:layout_marginRight="29dp"
-                android:layout_marginEnd="29dp"
-                android:layout_alignBaseline="@+id/btnShuffle"
-                android:layout_alignBottom="@+id/btnShuffle"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
-        </RelativeLayout>
+                android:layout_weight="1"
+                android:text="@string/btnContinue" />
+        </LinearLayout>
 
     </RelativeLayout>
 
