Updated and improved ShowGame; Improved reading PlayerPositions from webservice

--- a/app/src/main/res/layout/activity_add_game_select_players.xml
+++ b/app/src/main/res/layout/activity_add_game_select_players.xml
@@ -5,111 +5,112 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/background">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
 
-            <DatePicker
-                android:id="@+id/datePicker"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/table_PlayersHeader"
-                android:layout_alignParentTop="true"
-                android:layout_alignRight="@+id/table_PlayersHeader"
-                android:calendarViewShown="false"
-                android:datePickerMode="spinner"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/table_PlayersHeader"
-                android:layout_alignStart="@+id/table_PlayersHeader"
-                android:layout_below="@+id/datePicker"
-                android:layout_marginTop="11dp"
-                android:text="@string/SelectPlayersForGame"
-                android:textSize="24sp" />
+        <DatePicker
+            android:id="@+id/datePicker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/table_PlayersHeader"
+            android:layout_alignParentTop="true"
+            android:layout_alignRight="@+id/table_PlayersHeader"
+            android:calendarViewShown="false"
+            android:datePickerMode="spinner" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/table_PlayersHeader"
+            android:layout_alignStart="@+id/table_PlayersHeader"
+            android:layout_below="@+id/datePicker"
+            android:layout_marginTop="11dp"
+            android:text="@string/SelectPlayersForGame"
+            android:textSize="24sp" />
+
+        <TableLayout
+            android:id="@+id/table_PlayersHeader"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignTop="@+id/textView"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="32dp"
+            android:stretchColumns="0">
+
+            <TableRow>
+
+                <CheckBox
+                    android:id="@+id/ckbParticipationHeader"
+                    android:layout_width="0dp"
+                    android:layout_column="0"
+                    android:layout_weight="1.1"
+                    android:checked="true"
+                    android:gravity="center"
+                    android:text="@string/Participation"
+                    android:textStyle="bold" />
+            </TableRow>
+
+        </TableLayout>
+
+        <ScrollView
+            android:id="@+id/ScrollView01"
+            android:layout_width="wrap_content"
+            android:layout_height="180dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/table_PlayersHeader"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
 
             <TableLayout
+                android:id="@+id/table_Players"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:stretchColumns="0"
-                android:layout_marginTop="32dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_alignTop="@+id/textView"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:id="@+id/table_PlayersHeader">
-
-                <TableRow>
-
-                    <CheckBox
-                        android:id="@+id/ckbParticipationHeader"
-                        android:layout_width="0dp"
-                        android:layout_column="0"
-                        android:layout_weight="1.1"
-                        android:checked="true"
-                        android:text="@string/Participation"
-                        android:gravity="center"
-                        android:textStyle="bold" />
-                </TableRow>
+                android:stretchColumns="0">
 
             </TableLayout>
+        </ScrollView>
 
-            <ScrollView
-                android:id="@+id/ScrollView01"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="150dp"
-                android:layout_below="@+id/table_PlayersHeader"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true">
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/textView"
+            android:layout_alignParentTop="true"
+            android:layout_alignStart="@+id/textView"
+            android:layout_marginTop="88dp"
+            android:text="@string/Date"
+            android:textSize="24sp" />
 
-                <TableLayout
-                    android:id="@+id/table_Players"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:stretchColumns="0">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
 
-                </TableLayout>
-            </ScrollView>
-
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="wrap_content"
+            <Button
+                android:id="@+id/btnCancel"
+                style="@style/buttonStyle"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/textView"
-                android:layout_alignParentTop="true"
-                android:layout_alignStart="@+id/textView"
-                android:layout_marginTop="88dp"
-                android:text="@string/Date"
-                android:textSize="24sp" />
+                android:layout_weight="1"
+                android:text="@string/btnCancel" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true">
-
-                <Button
-                    android:id="@+id/btnCancel"
-                    style="@style/buttonStyle"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/btnCancel" />
-
-                <Button
-                    android:id="@+id/btnSave"
-                    style="@style/buttonStyle"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/btnContinue" />
-            </LinearLayout>
-        </RelativeLayout>
-    </LinearLayout>
+            <Button
+                android:id="@+id/btnSave"
+                style="@style/buttonStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/btnContinue" />
+        </LinearLayout>
+    </RelativeLayout>
+</LinearLayout>
