--- a/app/src/main/res/layout/activity_show_game.xml
+++ b/app/src/main/res/layout/activity_show_game.xml
@@ -115,6 +115,20 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"></android.support.v4.view.ViewPager>
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:indeterminate="true"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/pager"
+            android:layout_marginTop="18dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:visibility="gone"/>
+
 
     </RelativeLayout>
 
