--- a/app/src/main/res/layout/fragment_add_game_enter_data.xml
+++ b/app/src/main/res/layout/fragment_add_game_enter_data.xml
@@ -32,6 +32,7 @@
                 android:paddingRight="5dp"/>
 
             <TextView
+                android:id="@+id/txtPosition"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_column="0"
