--- a/app/src/main/res/layout/tab_team.xml
+++ b/app/src/main/res/layout/tab_team.xml
@@ -17,7 +17,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.4"
+                android:layout_weight="1.2"
                 android:textAlignment="center"
                 android:text="@string/Name" />
 
@@ -31,15 +31,14 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.4" />
+                android:layout_weight="0.3" />
 
         </TableRow>
     </TableLayout>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="155dp"
-        android:layout_weight="0.35">
+        android:layout_height="220dp">
 
         <TableLayout
             android:id="@+id/tableAllPlayers1"
@@ -76,7 +75,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.4" />
+                android:layout_weight="0.3" />
 
         </TableRow>
     </TableLayout>
@@ -84,8 +83,7 @@
     <ScrollView
         style="@android:style/Widget.Holo.ScrollView"
         android:layout_width="match_parent"
-        android:layout_height="155dp"
-        android:layout_weight="0.35">
+        android:layout_height="220dp">
 
         <TableLayout
             android:id="@+id/tableTeam1"
