String values bereinigt (en+de)

--- a/app/src/main/res/layout/tab_team.xml
+++ b/app/src/main/res/layout/tab_team.xml
@@ -63,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1.2"
                 android:textAlignment="center"
-                android:text="@string/name" />
+                android:text="@string/Name" />
 
             <TextView
                 android:layout_width="0dp"
