--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="redLogo">#C26C50</color>
     <color name="darkerRed">#B0523D</color>
     <color name ="black">#000</color>
+    <color name="standardRed">#BC4C31</color>
 
 </resources>
