improved add game enter data (score calc); fixed login layout; improved english translation

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,7 +55,8 @@
         android:layout_below="@+id/txvName"
         android:layout_toRightOf="@+id/txvName"
         android:ems="10"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:layout_alignBottom="@+id/txvPassword" />
 
     <LinearLayout
         android:id="@+id/layLinear"
