--- a/app/src/main/res/layout-large/activity_add_game_select_players.xml
+++ b/app/src/main/res/layout-large/activity_add_game_select_players.xml
@@ -64,12 +64,12 @@
             android:id="@+id/ScrollView01"
             android:layout_width="200dp"
             android:layout_height="180dp"
-            android:layout_below="@+id/table_PlayersHeader"
             android:layout_above="@+id/linearLayout"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true">
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/table_PlayersHeader">
 
             <TableLayout
                 android:id="@+id/table_Players"
@@ -92,12 +92,12 @@
             android:textSize="40sp" />
 
         <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:id="@+id/linearLayout">
+            android:layout_alignParentStart="true">
 
             <Button
                 android:id="@+id/btnCancel"
