--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,4 +41,9 @@
 
     <style name="Theme.App.Base.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="ShowQRCode" parent="Base.Theme.AppCompat.Light.Dialog.Alert">
+        <item name="windowFixedWidthMajor">90%</item>
+        <item name="windowFixedWidthMinor">90%</item>
+    </style>
+
 </resources>
